--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,7 @@ fabric.properties
 *.zip
 *.tar.gz
 *.rar
+pid.file
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
